# python_final_project

./: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/python_final_project/: __init__.py  cli.py  run_backtest.ipynb
src/python_final_project/backtests/: PinkTigerChef.csv
src/python_final_project/blockchain/: backtest.pkl  backtest_v2.pkl
tests/: __init__.py  test_python_final_project.py
