[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python_final_project"
version = "0.1.0"
description = "Creating a new python package by adapting PyBackTestChain package"
readme = "README.rst"
authors = [
  {name = "Alexandre Cohen-Skalli", email = "alexandre.cohen-skalli@dauphine.eu"}
]
maintainers = [
  {name = "Alexandre Cohen-Skalli", email = "alexandre.cohen-skalli@dauphine.eu"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/AlexandreCohenSkalli/python_final_project/issues"
changelog = "https://github.com/AlexandreCohenSkalli/python_final_project/blob/master/changelog.md"
homepage = "https://github.com/AlexandreCohenSkalli/python_final_project"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

[tool.poetry]
name = "python_final_project"
version = "0.1.0"
description = "Creating a Python package for my final project"
authors = ["Alexandre Cohen-Skalli <alexandre.cohen-skalli@dauphine.eu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pybacktestchain = "*"
backports-tarfile = "^1.2.0"
notebook = "^7.3.2"
ipykernel = "^6.29.5"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
semantic-release = "*"

[tool.poetry.group.dev.dependencies]
semantic-release = "^0.1.0"

